--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_ENV=production&&node server.js",
-    "server:dev": "export NODE_ENV=development&&nodemon server.js"
+    "start": "set NODE_ENV=production&&node server.js",
+    "server:dev": "set NODE_ENV=development&&nodemon server.js"
   },
   "author": "TripleN",
   "license": "ISC",
